gatekeeper/constraints/01-disallowed-tags.yaml
# Constraint cho luật 1: cấm tag :latest, áp dụng cho Pod trong ns demo
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: block-latest-tag
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    namespaces:
    - demo
  parameters:
    tags: ["latest"]
