gatekeeper/constraints/05-max-replicas.yaml
# Constraint cho luật custom: chặn Deployment có replicas > 5 trong ns demo
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMaxReplicas
metadata:
  name: deployment-max-replicas
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  match:
    kinds:
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
    namespaces:
    - demo
  parameters:
    max: 5
